compiler/testData/diagnostics/tests/dataClasses/innerOuterDataClass.fir.kt
<!INCOMPATIBLE_MODIFIERS!>inner<!> <!INCOMPATIBLE_MODIFIERS!>data<!> class Outer(val x: Int)